--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,19 @@
     <artifactId>gson</artifactId>
     <version>2.8.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-math3</artifactId>
+    <version>3.6.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.7</version>
+</dependency>
+
 </dependencies>  
 <build>
     <plugins>
