--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 	<version> 4.12 </version>
 </dependency>
 <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.2.8</version>
+    </dependency>
+<dependency>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson</artifactId>
     <version>2.8.2</version>
@@ -25,6 +30,19 @@
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-lang3</artifactId>
     <version>3.7</version>
+</dependency>
+<!-- JPA Persistence Dependencies -->
+<dependency>
+  <groupId>org.uqbar-project</groupId>
+  <artifactId>jpa-java8-extras</artifactId>
+  <version>1.0-alpha-1</version>
+</dependency>
+
+<!-- driver jdbc -->
+<dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.26</version>
 </dependency>
 
 </dependencies>  
