--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,15 @@
 	<version>5.1.26</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>2.21.0</version>
+    <scope>test</scope>
+</dependency>
+
+
 </dependencies>  
 <build>
     <plugins>
