--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
         <version>4.0.6</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>2.23.0</version>
+    </dependency>
+
 </dependencies>
 <build>
     <plugins>
